test(lotto number): 불필요한 `Generate`사용 수정
로또 넘버 테스트 중 불필요한 generate 사용을 -> List.of 로 수정함